--- a/source/form.html
+++ b/source/form.html
@@ -20,12 +20,12 @@
             <input class="form-group__input" type="text" name="cat-name" id="cat-name" placeholder="Барсик" required>
           </li>
           <li class="form-group__item">
-            <label class="form-group__label" for="cat-weight">Вес (кг):<sup>*</sup></label>
+            <label class="form-group__label" for="cat-weight">Вес (кг):*</label>
             <input class="form-group__input" type="number" name="cat-weight" id="cat-weight" min="1" max="25"
               placeholder="7" required>
           </li>
           <li class="form-group__item">
-            <label class="form-group__label" for="cat-age">Возраст (лет):<sup>*</sup></label>
+            <label class="form-group__label" for="cat-age">Возраст (лет):*</label>
             <input class="form-group__input" type="number" name="cat-age" id="cat-age" min="1" max="25" step="0.5"
               placeholder="7" required>
           </li>
@@ -58,13 +58,13 @@
       <legend class="form-group__legend form-group__legend--master">Контактные данные (владельца кота)</legend>
       <ul class="form-group__list form-group__list--master">
         <li class="form-group__item">
-          <label class="form-group__label" for="person__email">E-mail:<sup>*</sup></label>
+          <label class="form-group__label" for="person__email">E-mail:*</label>
           <input class="form-group__input form-group__input--master" type="email" name="person__email"
             id="person__email" placeholder="kuklachev@gmail.com" required>
           <span class="form-group__icon form-group__icon--email"></span>
         </li>
         <li class="form-group__item">
-          <label class="form-group__label" for="person__phone">Телефон:<sup>*</sup></label>
+          <label class="form-group__label" for="person__phone">Телефон:*</label>
           <input class="form-group__input form-group__input--master" type="tel" name="person__phone" id="person__phone"
             placeholder="8 (960) 900-60-90" required>
           <span class="form-group__icon form-group__icon--phone"></span>
@@ -103,7 +103,7 @@
 
     <div class="form__submit">
       <button class="form__button main-link" type="submit">Отправить заявку</button>
-      <span class="form__span"><sup>*</sup> &mdash; Обязательные поля</span>
+      <span class="form__span">* &mdash; Обязательные поля</span>
     </div>
 
   </form>
