--- a/source/index.html
+++ b/source/index.html
@@ -23,13 +23,13 @@
     <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
       диету! Cat Energy Slim поможет вашему питомцу
       сбросить лишний вес.</p>
-    <a class="program__link" href="javascript:undefined">Каталог slim</a>
+    <a class="program__link" href="#">Каталог slim</a>
   </section>
   <section class="program program--fat">
     <h3 class="program__title program__title--fat">Набор массы</h3>
     <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
       вашему коту нарастить необходимые мышцы!</p>
-    <a class="program__link" href="javascript:undefined">Каталог pro</a>
+    <a class="program__link" href="#">Каталог pro</a>
   </section>
 </article>
 
