--- a/source/index.html
+++ b/source/index.html
@@ -79,14 +79,14 @@
         <div class="slider__image-wrapper slider__image-wrapper--before slider__image-wrapper--active">
           <picture>
             <source media="(min-width: 768px)" srcset="img/cat-fat-l@1x.png 1x, img/cat-fat-l@1x.png 2x">
-            <img class="slider__image  slider__image--before" src="img/cat-fat-s@1x.png"
+            <img class="slider__image  slider__image--before" src="img/cat-fat-s@1x.png" width="280" height="232"
               srcset="img/cat-fat-s@1x.png 2x" alt="кот до курса cat-energy." loading="lazy">
           </picture>
         </div>
         <div class="slider__image-wrapper slider__image-wrapper--after">
           <picture>
             <source media="(min-width: 768px)" srcset="img/cat-skinny-l@1x.png 1x, img/cat-skinny-l@1x.png 2x">
-            <img class="slider__image  slider__image--after" src="img/cat-skinny-s@1x.png"
+            <img class="slider__image  slider__image--after" src="img/cat-skinny-s@1x.png" width="280" height="232"
               srcset="img/cat-skinny-s@1x.png 2x" alt="кот после курса cat-energy." loading="lazy">
           </picture>
         </div>
